@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>275</height>
    </rect>
   </property>
   <property name="windowTitle">
