@@ -37,16 +37,16 @@ class ManualBeamFinder(QtWidgets.QDialog):
                                  self)
 
         # values for spinboxes
-        self._true_centre = 121.
-        self._true_sd = 5.
+        self._true_centre = 500.
+        self._true_sd = 20.
 
         self._pixels_to_include = 200
         self._integrate_width = 50
-        self._integrate_position = 121
-        self._low_px = 122
-        self._high_px = 122
-        self._low_bkg = 122
-        self._high_bkg = 122
+        self._integrate_position = 500
+        self._low_px = 500
+        self._high_px = 501
+        self._low_bkg = 503
+        self._high_bkg = 499
 
         # detector image
         self.detector_image_layout = QtWidgets.QGridLayout(
@@ -433,10 +433,10 @@ class Cross_Section(FigureCanvas):
         self._dragging = False
 
         # values for foreground and background regions
-        self._low_px = 112
-        self._high_px = 115
-        self._low_bkg = 110
-        self._high_bkg = 120
+        self._low_px = 500
+        self._high_px = 505
+        self._low_bkg = 490
+        self._high_bkg = 515
         self.line_attrs = {}
 
         self.axes = self.figure.add_axes([0.1, 0.07, 0.95, 0.94])
